--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,152 +1,226 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
 ::after,
 ::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-a { text-decoration: none; }
+a {
+  text-decoration: none;
+}
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
-body { font-family: 'Poppins', sans-serif; }
+body {
+  font-family: "Poppins", sans-serif;
+}
 
-.wrapper { display: flex; }
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  display: flex;
+}
 
 .main {
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    transition: all 0.35s ease-in-out;
-    background-color: #fafbfe;
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  transition: all 0.35s ease-in-out;
+  background-color: #fafbfe;
 }
 
 .sidebar {
-    width: 70px;
-    min-width: 70px;
-    z-index: 1000;
-    background-color: #0e2238;
-    display: flex;
-    flex-direction: column;
-    transition: all .25s ease-in-out;
+  width: 70px;
+  min-width: 70px;
+  z-index: 1000;
+  background-color: #0e2238;
+  display: flex;
+  flex-direction: column;
+  transition: all 0.25s ease-in-out;
 }
 
 .sidebar.expand {
-    width: 260px;
-    min-width: 260px;
+  width: 260px;
+  min-width: 260px;
 }
 
 .sidebar-toggle {
-    background-color: transparent;
-    cursor: pointer;
-    border: 0;
-    padding: 1rem 1.5rem;
+  background-color: transparent;
+  cursor: pointer;
+  border: 0;
+  padding: 1rem 1.5rem;
 }
 
 .toggle-icon {
-    font-size: 1.5rem;
-    color: #FFF;
+  font-size: 1.5rem;
+  color: #fff;
 }
 
-.sidebar-logo { margin: auto 0; }
+.sidebar-logo {
+  margin: auto 0;
+}
 
 .sidebar-logo a {
-    color: #FFF;
-    font-size: 1.15rem;
-    font-weight: 600;
+  color: #fff;
+  font-size: 1.15rem;
+  font-weight: 600;
 }
 
 #sidebar:not(.expand) .sidebar-logo,
-#sidebar:not(.expand) a.sidebar-link span { display: none; }
+#sidebar:not(.expand) a.sidebar-link span {
+  display: none;
+}
 
 .sidebar-nav {
-    padding: 2rem 0;
-    flex: 1 1 auto;
+  padding: 2rem 0;
+  flex: 1 1 auto;
 }
 
 a.sidebar-link {
-    padding: .625rem 1.625rem;
-    color: #FFF;
-    display: block;
-    font-size: 0.9rem;
-    white-space: nowrap;
-    border-left: 3px solid transparent;
-    display: flex;
+  padding: 0.625rem 1.625rem;
+  color: #fff;
+  display: block;
+  font-size: 0.9rem;
+  white-space: nowrap;
+  border-left: 3px solid transparent;
+  display: flex;
 }
 
 .icon {
-    font-size: 1.2rem;
-    margin-right: .75rem;
-    font-weight: bold;
+  font-size: 1.2rem;
+  margin-right: 0.75rem;
+  font-weight: bold;
 }
 
 a.sidebar-link:hover {
-    background-color: rgba(255, 255, 255, .075);
-    border-left: 3px solid #3b7ddd;
+  background-color: rgba(255, 255, 255, 0.075);
+  border-left: 3px solid #3b7ddd;
 }
 
-.sidebar-item { position: relative; }
+.sidebar-item {
+  position: relative;
+}
 
 .sidebar:not(.expand) .sidebar-item .sidebar-dropdown {
-    position: absolute;
-    top: 0;
-    left: 70px;
-    background-color: #0e2238;
-    padding: 0;
-    min-width: 15rem;
-    display: none;
+  position: absolute;
+  top: 0;
+  left: 70px;
+  background-color: #0e2238;
+  padding: 0;
+  min-width: 15rem;
+  display: none;
 }
 
-.sidebar:not(.expand) .sidebar-item:hover .has-dropdown+.sidebar-dropdown {
-    display: block;
-    max-height: 15em;
-    width: 100%;
-    opacity: 1;
+.sidebar:not(.expand) .sidebar-item:hover .has-dropdown + .sidebar-dropdown {
+  display: block;
+  max-height: 15em;
+  width: 100%;
+  opacity: 1;
 }
 
 .sidebar.expand .sidebar-link[data-bs-toggle="collapse"]::after {
-    border: solid;
-    border-width: 0 .075rem .075rem 0;
-    content: "";
-    display: inline-block;
-    padding: 2px;
-    position: absolute;
-    right: 1.5rem;
-    top: 1.4rem;
-    transform: rotate(-135deg);
-    transition: all .2s ease-out;
+  border: solid;
+  border-width: 0 0.075rem 0.075rem 0;
+  content: "";
+  display: inline-block;
+  padding: 2px;
+  position: absolute;
+  right: 1.5rem;
+  top: 1.4rem;
+  transform: rotate(-135deg);
+  transition: all 0.2s ease-out;
 }
 
 .sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
-    transform: rotate(45deg);
-    transition: all .2s ease-out;
+  transform: rotate(45deg);
+  transition: all 0.2s ease-out;
 }
-
-.main { padding-top: 2rem; }
 
 .form-container {
-    background-color: #A8DEDB;
-    border-radius: .75rem;
-    padding: 1.4rem 2rem;
+  background-color: #a8dedb;
+  border-radius: 0.75rem;
+  padding: 1.4rem 2rem;
 }
 
-.form-group { margin-bottom: 1.2rem; }
+.form-group {
+  margin-bottom: 1.2rem;
+}
 
 .success-added {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.tr-row { vertical-align: middle; }
+.tr-row {
+  vertical-align: middle;
+}
 
 .update-message,
 .delete-message {
-    font-size: .8rem;
-    font-weight: 600;
+  font-size: 0.8rem;
+  font-weight: 600;
 }
 
-.delete-message { color: #dc3545 }
+.delete-message {
+  color: #dc3545;
+}
 
-.update-message { color: #0dcaf0 }
+.update-message {
+  color: #0dcaf0;
+}
+
+.main {
+  min-height: 100vh;
+}
+
+.main-header {
+  margin-bottom: 2rem;
+}
+
+.main-content {
+  height: 100%;
+  padding-top: 2rem;
+}
+
+.main-img__container {
+  height: inherit;
+}
+
+.main-title {
+  padding-top: 4rem;
+  font-size: 4rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  color: #3b7ddd;
+}
+
+.main-title__span {
+  color: #0e2238;
+}
+
+.card-title {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  color: #0e2238;
+}
+
+.card-title i {
+  margin-right: 0.75rem;
+  font-weight: 300;
+}
+
+.git-link {
+  display: inline-flex;
+  align-items: center;
+}
+
+.git-icon {
+  margin-right: 0.5rem;
+}
